--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tawsife3ds.github.io/e3ds/unzipit-react-app",
+  "homepage": "http://tawsife3ds.github.io/unzipit-react-app",
   "name": "unzipit-react-app",
   "version": "0.1.0",
   "private": true,
